@@ -16,6 +16,7 @@
 package com.google.cloud.bigquery.storage.v1;
 
 import com.google.api.pathtemplate.ValidationException;
+import com.google.cloud.bigquery.storage.v1.Exceptions.RowIndexToErrorException;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.primitives.Doubles;
@@ -25,12 +26,14 @@ import com.google.protobuf.ByteString;
 import com.google.protobuf.Descriptors.Descriptor;
 import com.google.protobuf.Descriptors.FieldDescriptor;
 import com.google.protobuf.DynamicMessage;
-import com.google.protobuf.Message;
 import com.google.protobuf.UninitializedMessageException;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
-import java.util.logging.Logger;
+import java.util.Map;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
@@ -44,12 +47,13 @@ import org.threeten.bp.temporal.ChronoField;
 import org.threeten.bp.temporal.TemporalAccessor;
 
 /**
- * Converts Json data to protocol buffer messages given the protocol buffer descriptor. The protobuf
- * descriptor must have all fields lowercased.
+ * Converts JSON data to Protobuf messages given the Protobuf descriptor and BigQuery table schema.
+ * The Protobuf descriptor must have all fields lowercased.
  */
-public class JsonToProtoMessage {
-  private static final Logger LOG = Logger.getLogger(JsonToProtoMessage.class.getName());
-  private static ImmutableMap<FieldDescriptor.Type, String> FieldTypeToDebugMessage =
+public class JsonToProtoMessage implements ToProtoConverter<Object> {
+  public static final JsonToProtoMessage INSTANCE = new JsonToProtoMessage();
+  private static final int NUMERIC_SCALE = 9;
+  private static final ImmutableMap<FieldDescriptor.Type, String> FIELD_TYPE_TO_DEBUG_MESSAGE =
       new ImmutableMap.Builder<FieldDescriptor.Type, String>()
           .put(FieldDescriptor.Type.BOOL, "boolean")
           .put(FieldDescriptor.Type.BYTES, "bytes")
@@ -59,7 +63,7 @@ public class JsonToProtoMessage {
           .put(FieldDescriptor.Type.STRING, "string")
           .put(FieldDescriptor.Type.MESSAGE, "object")
           .build();
-  private static final DateTimeFormatter timestampFormatter =
+  private static final DateTimeFormatter TIMESTAMP_FORMATTER =
       new DateTimeFormatterBuilder()
           .parseLenient()
           .append(DateTimeFormatter.ofPattern("yyyy[/][-]MM[/][-]dd"))
@@ -100,25 +104,107 @@ public class JsonToProtoMessage {
           .toFormatter()
           .withZone(ZoneOffset.UTC);
 
+  private static final DateTimeFormatter DATETIME_FORMATTER =
+      new DateTimeFormatterBuilder()
+          .parseLenient()
+          .append(DateTimeFormatter.ISO_LOCAL_DATE)
+          .optionalStart()
+          .optionalStart()
+          .parseCaseInsensitive()
+          .appendLiteral('T')
+          .optionalEnd()
+          .optionalStart()
+          .appendLiteral(' ')
+          .optionalEnd()
+          .append(DateTimeFormatter.ISO_LOCAL_TIME)
+          .optionalEnd()
+          .parseDefaulting(ChronoField.HOUR_OF_DAY, 0)
+          .parseDefaulting(ChronoField.MINUTE_OF_HOUR, 0)
+          .parseDefaulting(ChronoField.SECOND_OF_MINUTE, 0)
+          .toFormatter();
+
+  /** You can use {@link #INSTANCE} instead */
+  public JsonToProtoMessage() {}
+
+  public static DynamicMessage convertJsonToProtoMessage(
+      Descriptor protoSchema,
+      TableSchema tableSchema,
+      JSONObject json,
+      boolean ignoreUnknownFields) {
+    return INSTANCE.convertToProtoMessage(protoSchema, tableSchema, json, ignoreUnknownFields);
+  }
+
+  public static DynamicMessage convertJsonToProtoMessage(Descriptor protoSchema, JSONObject json) {
+    return INSTANCE.convertToProtoMessage(protoSchema, json);
+  }
+
+  public static DynamicMessage convertJsonToProtoMessage(
+      Descriptor protoSchema, TableSchema tableSchema, JSONObject json) {
+    return INSTANCE.convertToProtoMessage(protoSchema, tableSchema, json);
+  }
+
+  /**
+   * Converts input message to Protobuf.
+   *
+   * <p>WARNING: it's much more efficient to call the other APIs accepting json array if the jsons
+   * share the same table schema.
+   *
+   * @param protoSchema the schema of the output Protobuf schems.
+   * @param tableSchema tha underlying table schema for which Protobuf is being built.
+   * @param json the input JSON object converted to Protobuf.
+   * @param ignoreUnknownFields flag indicating that the additional fields not present in the output
+   *     schema should be accepted.
+   * @return Converted message in Protobuf format.
+   */
+  public DynamicMessage convertToProtoMessage(
+      Descriptor protoSchema, TableSchema tableSchema, Object json, boolean ignoreUnknownFields) {
+    return convertToProtoMessage(protoSchema, tableSchema, (JSONObject) json, ignoreUnknownFields);
+  }
+
+  /**
+   * Converts Json array to list of Protobuf
+   *
+   * @param protoSchema the schema of the output Protobuf schems.
+   * @param tableSchema tha underlying table schema for which Protobuf is being built.
+   * @param jsonArray the input JSON array converted to Protobuf.
+   * @param ignoreUnknownFields flag indicating that the additional fields not present in the output
+   *     schema should be accepted.
+   * @return Converted message in Protobuf format.
+   */
+  @Override
+  public List<DynamicMessage> convertToProtoMessage(
+      Descriptor protoSchema,
+      TableSchema tableSchema,
+      Iterable<Object> jsonArray,
+      boolean ignoreUnknownFields) {
+    return convertToProtoMessage(
+        protoSchema, tableSchema, (JSONArray) jsonArray, ignoreUnknownFields);
+  }
+
   /**
    * Converts Json data to protocol buffer messages given the protocol buffer descriptor.
+   *
+   * <p>WARNING: it's much more efficient to call the other APIs accepting json array if the jsons
+   * share the same table schema.
    *
    * @param protoSchema
    * @param json
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
-  public static DynamicMessage convertJsonToProtoMessage(Descriptor protoSchema, JSONObject json)
+  public DynamicMessage convertToProtoMessage(Descriptor protoSchema, JSONObject json)
       throws IllegalArgumentException {
     Preconditions.checkNotNull(json, "JSONObject is null.");
     Preconditions.checkNotNull(protoSchema, "Protobuf descriptor is null.");
     Preconditions.checkState(json.length() != 0, "JSONObject is empty.");
 
-    return convertJsonToProtoMessageImpl(
-        protoSchema, null, json, "root", /*topLevel=*/ true, false);
+    return convertToProtoMessage(protoSchema, null, json, "root", false);
   }
 
   /**
    * Converts Json data to protocol buffer messages given the protocol buffer descriptor.
+   *
+   * <p>WARNING: it's much more efficient to call the other APIs accepting json array if the jsons
+   * share the same table schema.
    *
    * @param protoSchema
    * @param tableSchema bigquery table schema is needed for type conversion of DATETIME, TIME,
@@ -126,7 +212,7 @@ public class JsonToProtoMessage {
    * @param json
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
-  public static DynamicMessage convertJsonToProtoMessage(
+  public DynamicMessage convertToProtoMessage(
       Descriptor protoSchema, TableSchema tableSchema, JSONObject json)
       throws IllegalArgumentException {
     Preconditions.checkNotNull(json, "JSONObject is null.");
@@ -134,17 +220,14 @@ public class JsonToProtoMessage {
     Preconditions.checkNotNull(tableSchema, "TableSchema is null.");
     Preconditions.checkState(json.length() != 0, "JSONObject is empty.");
 
-    return convertJsonToProtoMessageImpl(
-        protoSchema,
-        tableSchema.getFieldsList(),
-        json,
-        "root",
-        /*topLevel=*/ true,
-        /*ignoreUnknownFields*/ false);
+    return convertToProtoMessage(protoSchema, tableSchema.getFieldsList(), json, "root", false);
   }
 
   /**
    * Converts Json data to protocol buffer messages given the protocol buffer descriptor.
+   *
+   * <p>WARNING: it's much more efficient to call the other APIs accepting json array if the jsons
+   * share the same table schema.
    *
    * @param protoSchema
    * @param tableSchema bigquery table schema is needed for type conversion of DATETIME, TIME,
@@ -153,21 +236,53 @@ public class JsonToProtoMessage {
    * @param ignoreUnknownFields allows unknown fields in JSON input to be ignored.
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
-  public static DynamicMessage convertJsonToProtoMessage(
+  public DynamicMessage convertToProtoMessage(
       Descriptor protoSchema, TableSchema tableSchema, JSONObject json, boolean ignoreUnknownFields)
       throws IllegalArgumentException {
     Preconditions.checkNotNull(json, "JSONObject is null.");
     Preconditions.checkNotNull(protoSchema, "Protobuf descriptor is null.");
     Preconditions.checkNotNull(tableSchema, "TableSchema is null.");
     Preconditions.checkState(json.length() != 0, "JSONObject is empty.");
+    return convertToProtoMessage(
+        protoSchema, tableSchema.getFieldsList(), json, "root", ignoreUnknownFields);
+  }
 
-    return convertJsonToProtoMessageImpl(
-        protoSchema,
-        tableSchema.getFieldsList(),
-        json,
-        "root",
-        /*topLevel=*/ true,
-        ignoreUnknownFields);
+  /**
+   * Converts Json array to list of protocol buffer messages given the protocol buffer descriptor.
+   *
+   * @param protoSchema
+   * @param tableSchema bigquery table schema is needed for type conversion of DATETIME, TIME,
+   *     NUMERIC, BIGNUMERIC
+   * @param jsonArray
+   * @param ignoreUnknownFields allows unknown fields in JSON input to be ignored.
+   * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
+   */
+  public List<DynamicMessage> convertToProtoMessage(
+      Descriptor protoSchema,
+      TableSchema tableSchema,
+      JSONArray jsonArray,
+      boolean ignoreUnknownFields)
+      throws IllegalArgumentException {
+    Preconditions.checkNotNull(jsonArray, "jsonArray is null.");
+    Preconditions.checkNotNull(protoSchema, "Protobuf descriptor is null.");
+    Preconditions.checkNotNull(tableSchema, "tableSchema is null.");
+    Preconditions.checkState(jsonArray.length() != 0, "jsonArray is empty.");
+
+    return convertToProtoMessage(
+        protoSchema, tableSchema.getFieldsList(), jsonArray, "root", ignoreUnknownFields);
+  }
+
+  private DynamicMessage convertToProtoMessage(
+      Descriptor protoSchema,
+      List<TableFieldSchema> tableSchema,
+      JSONObject jsonObject,
+      String jsonScope,
+      boolean ignoreUnknownFields) {
+    JSONArray jsonArray = new JSONArray();
+    jsonArray.put(jsonObject);
+    return convertToProtoMessage(
+            protoSchema, tableSchema, jsonArray, jsonScope, ignoreUnknownFields)
+        .get(0);
   }
 
   /**
@@ -176,89 +291,164 @@ public class JsonToProtoMessage {
    * @param protoSchema
    * @param json
    * @param jsonScope Debugging purposes
-   * @param topLevel checks if root level has any matching fields.
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
-  private static DynamicMessage convertJsonToProtoMessageImpl(
+  private List<DynamicMessage> convertToProtoMessage(
       Descriptor protoSchema,
       List<TableFieldSchema> tableSchema,
-      JSONObject json,
+      JSONArray jsonArray,
       String jsonScope,
-      boolean topLevel,
       boolean ignoreUnknownFields)
-      throws IllegalArgumentException {
+      throws RowIndexToErrorException {
+    List<DynamicMessage> messageList = new ArrayList<>();
+    Map<String, FieldDescriptorAndFieldTableSchema> jsonNameToMetadata = new HashMap<>();
+    Map<Integer, String> rowIndexToErrorMessage = new HashMap<>();
 
-    DynamicMessage.Builder protoMsg = DynamicMessage.newBuilder(protoSchema);
-    String[] jsonNames = JSONObject.getNames(json);
-    if (jsonNames == null) {
-      return protoMsg.build();
-    }
-    for (int i = 0; i < jsonNames.length; i++) {
-      String jsonName = jsonNames[i];
-      // We want lowercase here to support case-insensitive data writes.
-      // The protobuf descriptor that is used is assumed to have all lowercased fields
-      String jsonFieldLocator = jsonName.toLowerCase();
-
-      // If jsonName is not compatible with proto naming convention, we should look by its
-      // placeholder name.
-      if (!BigQuerySchemaUtil.isProtoCompatible(jsonFieldLocator)) {
-        jsonFieldLocator = BigQuerySchemaUtil.generatePlaceholderFieldName(jsonFieldLocator);
-      }
-      String currentScope = jsonScope + "." + jsonName;
-      FieldDescriptor field = protoSchema.findFieldByName(jsonFieldLocator);
-      if (field == null && !ignoreUnknownFields) {
-        throw new Exceptions.JsonDataHasUnknownFieldException(currentScope);
-      } else if (field == null) {
-        continue;
-      }
-      TableFieldSchema fieldSchema = null;
-      if (tableSchema != null) {
-        // protoSchema is generated from tableSchema so their field ordering should match.
-        fieldSchema = tableSchema.get(field.getIndex());
-        if (!fieldSchema.getName().toLowerCase().equals(BigQuerySchemaUtil.getFieldName(field))) {
-          throw new ValidationException(
-              "Field at index "
-                  + field.getIndex()
-                  + " has mismatch names ("
-                  + fieldSchema.getName()
-                  + ") ("
-                  + field.getName()
-                  + ")");
-        }
-      }
+    boolean hasDataUnknownError = false;
+    for (int i = 0; i < jsonArray.length(); i++) {
       try {
-        if (!field.isRepeated()) {
-          fillField(
-              protoMsg, field, fieldSchema, json, jsonName, currentScope, ignoreUnknownFields);
-        } else {
-          fillRepeatedField(
-              protoMsg, field, fieldSchema, json, jsonName, currentScope, ignoreUnknownFields);
+        DynamicMessage.Builder protoMsg = DynamicMessage.newBuilder(protoSchema);
+        JSONObject jsonObject = jsonArray.getJSONObject(i);
+        String[] jsonNames = JSONObject.getNames(jsonObject);
+        if (jsonNames == null) {
+          messageList.add(protoMsg.build());
+          continue;
         }
-      } catch (Exceptions.FieldParseError ex) {
-        throw ex;
-      } catch (Exception ex) {
-        // This function is recursively called, so this throw will be caught and throw directly out
-        // by the catch
-        // above.
-        throw new Exceptions.FieldParseError(
-            currentScope,
-            fieldSchema != null ? fieldSchema.getType().name() : field.getType().name(),
-            ex);
+        for (String jsonName : jsonNames) {
+          String currentScope = jsonScope + "." + jsonName;
+          FieldDescriptorAndFieldTableSchema fieldDescriptorAndFieldTableSchema =
+              jsonNameToMetadata.computeIfAbsent(
+                  currentScope,
+                  k -> {
+                    return computeDescriptorAndSchema(
+                        currentScope, ignoreUnknownFields, jsonName, protoSchema, tableSchema);
+                  });
+          if (fieldDescriptorAndFieldTableSchema == null) {
+            continue;
+          }
+          FieldDescriptor field = fieldDescriptorAndFieldTableSchema.fieldDescriptor;
+          TableFieldSchema tableFieldSchema = fieldDescriptorAndFieldTableSchema.tableFieldSchema;
+          try {
+            if (!field.isRepeated()) {
+              fillField(
+                  protoMsg,
+                  field,
+                  tableFieldSchema,
+                  jsonObject,
+                  jsonName,
+                  currentScope,
+                  ignoreUnknownFields);
+            } else {
+              fillRepeatedField(
+                  protoMsg,
+                  field,
+                  tableFieldSchema,
+                  jsonObject,
+                  jsonName,
+                  currentScope,
+                  ignoreUnknownFields);
+            }
+          } catch (Exceptions.FieldParseError ex) {
+            throw ex;
+          } catch (Exception ex) {
+            // This function is recursively called, so this throw will be caught and throw directly
+            // out by the catch above.
+            throw new Exceptions.FieldParseError(
+                currentScope,
+                tableFieldSchema != null
+                    ? tableFieldSchema.getType().name()
+                    : field.getType().name(),
+                ex);
+          }
+        }
+        DynamicMessage msg;
+        try {
+          msg = protoMsg.build();
+        } catch (UninitializedMessageException e) {
+          String errorMsg = e.getMessage();
+          int idxOfColon = errorMsg.indexOf(":");
+          String missingFieldName = errorMsg.substring(idxOfColon + 2);
+          throw new IllegalArgumentException(
+              String.format(
+                  "JSONObject does not have the required field %s.%s.",
+                  jsonScope, missingFieldName));
+        }
+        messageList.add(msg);
+      } catch (IllegalArgumentException exception) {
+        if (exception instanceof Exceptions.DataHasUnknownFieldException) {
+          hasDataUnknownError = true;
+        }
+        if (exception instanceof Exceptions.FieldParseError) {
+          Exceptions.FieldParseError ex = (Exceptions.FieldParseError) exception;
+          rowIndexToErrorMessage.put(
+              i,
+              "Field "
+                  + ex.getFieldName()
+                  + " failed to convert to "
+                  + ex.getBqType()
+                  + ". Error: "
+                  + ex.getCause().getMessage());
+        } else {
+          rowIndexToErrorMessage.put(i, exception.getMessage());
+        }
       }
     }
-
-    DynamicMessage msg;
-    try {
-      msg = protoMsg.build();
-    } catch (UninitializedMessageException e) {
-      String errorMsg = e.getMessage();
-      int idxOfColon = errorMsg.indexOf(":");
-      String missingFieldName = errorMsg.substring(idxOfColon + 2);
-      throw new IllegalArgumentException(
-          String.format(
-              "JSONObject does not have the required field %s.%s.", jsonScope, missingFieldName));
+    if (!rowIndexToErrorMessage.isEmpty()) {
+      throw new RowIndexToErrorException(rowIndexToErrorMessage, hasDataUnknownError);
     }
-    return msg;
+    return messageList;
+  }
+
+  private static final class FieldDescriptorAndFieldTableSchema {
+    TableFieldSchema tableFieldSchema;
+
+    // Field descriptor
+    FieldDescriptor fieldDescriptor;
+  }
+
+  private FieldDescriptorAndFieldTableSchema computeDescriptorAndSchema(
+      String currentScope,
+      boolean ignoreUnknownFields,
+      String jsonName,
+      Descriptor protoSchema,
+      List<TableFieldSchema> tableFieldSchemaList) {
+
+    // We want lowercase here to support case-insensitive data writes.
+    // The protobuf descriptor that is used is assumed to have all lowercased fields
+    String jsonFieldLocator = jsonName.toLowerCase();
+
+    // If jsonName is not compatible with proto naming convention, we should look by its
+    // placeholder name.
+    if (!BigQuerySchemaUtil.isProtoCompatible(jsonFieldLocator)) {
+      jsonFieldLocator = BigQuerySchemaUtil.generatePlaceholderFieldName(jsonFieldLocator);
+    }
+
+    FieldDescriptor field = protoSchema.findFieldByName(jsonFieldLocator);
+    if (field == null && !ignoreUnknownFields) {
+      throw new Exceptions.DataHasUnknownFieldException(currentScope);
+    } else if (field == null) {
+      return null;
+    }
+    TableFieldSchema fieldSchema = null;
+    if (tableFieldSchemaList != null) {
+      // protoSchema is generated from tableSchema so their field ordering should match.
+      fieldSchema = tableFieldSchemaList.get(field.getIndex());
+      if (!fieldSchema.getName().toLowerCase().equals(BigQuerySchemaUtil.getFieldName(field))) {
+        throw new ValidationException(
+            "Field at index "
+                + field.getIndex()
+                + " has mismatch names ("
+                + fieldSchema.getName()
+                + ") ("
+                + field.getName()
+                + ")");
+      }
+    }
+    FieldDescriptorAndFieldTableSchema fieldDescriptorAndFieldTableSchema =
+        new FieldDescriptorAndFieldTableSchema();
+    fieldDescriptorAndFieldTableSchema.fieldDescriptor = field;
+    fieldDescriptorAndFieldTableSchema.tableFieldSchema = fieldSchema;
+    return fieldDescriptorAndFieldTableSchema;
   }
 
   /**
@@ -272,7 +462,7 @@ public class JsonToProtoMessage {
    * @param currentScope Debugging purposes
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
-  private static void fillField(
+  private void fillField(
       DynamicMessage.Builder protoMsg,
       FieldDescriptor fieldDescriptor,
       TableFieldSchema fieldSchema,
@@ -281,7 +471,6 @@ public class JsonToProtoMessage {
       String currentScope,
       boolean ignoreUnknownFields)
       throws IllegalArgumentException {
-
     java.lang.Object val = json.get(exactJsonKeyName);
     if (val == JSONObject.NULL) {
       return;
@@ -289,12 +478,12 @@ public class JsonToProtoMessage {
     switch (fieldDescriptor.getType()) {
       case BOOL:
         if (val instanceof Boolean) {
-          protoMsg.setField(fieldDescriptor, (Boolean) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         if (val instanceof String
-            && ("true".equals(((String) val).toLowerCase())
-                || "false".equals(((String) val).toLowerCase()))) {
+            && ("true".equalsIgnoreCase(((String) val))
+                || "false".equalsIgnoreCase(((String) val)))) {
           protoMsg.setField(fieldDescriptor, Boolean.parseBoolean((String) val));
           return;
         }
@@ -315,10 +504,15 @@ public class JsonToProtoMessage {
                       new BigDecimal(((Number) val).longValue())));
               return;
             } else if (val instanceof Float || val instanceof Double) {
+              // In JSON, the precision passed in is machine dependent. We should round the number
+              // before passing to backend.
+              BigDecimal bigDecimal = new BigDecimal(String.valueOf(val));
+              if (bigDecimal.scale() > 9) {
+                bigDecimal = bigDecimal.setScale(NUMERIC_SCALE, RoundingMode.HALF_UP);
+              }
               protoMsg.setField(
                   fieldDescriptor,
-                  BigDecimalByteStringEncoder.encodeToNumericByteString(
-                      new BigDecimal(String.valueOf(val))));
+                  BigDecimalByteStringEncoder.encodeToNumericByteString(bigDecimal));
               return;
             } else if (val instanceof BigDecimal) {
               protoMsg.setField(
@@ -348,7 +542,7 @@ public class JsonToProtoMessage {
             } else if (val instanceof BigDecimal) {
               protoMsg.setField(
                   fieldDescriptor,
-                  BigDecimalByteStringEncoder.encodeToNumericByteString((BigDecimal) val));
+                  BigDecimalByteStringEncoder.encodeToBigNumericByteString((BigDecimal) val));
               return;
             }
           }
@@ -376,10 +570,11 @@ public class JsonToProtoMessage {
             if (val instanceof String) {
               protoMsg.setField(
                   fieldDescriptor,
-                  CivilTimeEncoder.encodePacked64DatetimeMicros(LocalDateTime.parse((String) val)));
+                  CivilTimeEncoder.encodePacked64DatetimeMicros(
+                      LocalDateTime.parse((String) val, DATETIME_FORMATTER)));
               return;
             } else if (val instanceof Long) {
-              protoMsg.setField(fieldDescriptor, (Long) val);
+              protoMsg.setField(fieldDescriptor, val);
               return;
             }
           } else if (fieldSchema.getType() == TableFieldSchema.Type.TIME) {
@@ -389,36 +584,36 @@ public class JsonToProtoMessage {
                   CivilTimeEncoder.encodePacked64TimeMicros(LocalTime.parse((String) val)));
               return;
             } else if (val instanceof Long) {
-              protoMsg.setField(fieldDescriptor, (Long) val);
+              protoMsg.setField(fieldDescriptor, val);
               return;
             }
           } else if (fieldSchema.getType() == TableFieldSchema.Type.TIMESTAMP) {
             if (val instanceof String) {
               Double parsed = Doubles.tryParse((String) val);
               if (parsed != null) {
-                protoMsg.setField(fieldDescriptor, parsed.longValue() * 10000000);
+                protoMsg.setField(fieldDescriptor, parsed.longValue());
                 return;
               }
-              TemporalAccessor parsedTime = timestampFormatter.parse((String) val);
+              TemporalAccessor parsedTime = TIMESTAMP_FORMATTER.parse((String) val);
               protoMsg.setField(
                   fieldDescriptor,
                   parsedTime.getLong(ChronoField.INSTANT_SECONDS) * 1000000
                       + parsedTime.getLong(ChronoField.MICRO_OF_SECOND));
               return;
             } else if (val instanceof Long) {
-              protoMsg.setField(fieldDescriptor, (Long) val);
+              protoMsg.setField(fieldDescriptor, val);
               return;
             } else if (val instanceof Integer) {
-              protoMsg.setField(fieldDescriptor, new Long((Integer) val) * 10000000);
+              protoMsg.setField(fieldDescriptor, Long.valueOf((Integer) val));
               return;
             }
           }
         }
         if (val instanceof Integer) {
-          protoMsg.setField(fieldDescriptor, new Long((Integer) val));
+          protoMsg.setField(fieldDescriptor, Long.valueOf((Integer) val));
           return;
         } else if (val instanceof Long) {
-          protoMsg.setField(fieldDescriptor, (Long) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         if (val instanceof String) {
@@ -440,7 +635,7 @@ public class JsonToProtoMessage {
           }
         }
         if (val instanceof Integer) {
-          protoMsg.setField(fieldDescriptor, (Integer) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         if (val instanceof String) {
@@ -459,7 +654,7 @@ public class JsonToProtoMessage {
           }
         }
         if (val instanceof String) {
-          protoMsg.setField(fieldDescriptor, (String) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         break;
@@ -478,15 +673,13 @@ public class JsonToProtoMessage {
         break;
       case MESSAGE:
         if (val instanceof JSONObject) {
-          Message.Builder message = protoMsg.newBuilderForField(fieldDescriptor);
           protoMsg.setField(
               fieldDescriptor,
-              convertJsonToProtoMessageImpl(
+              convertToProtoMessage(
                   fieldDescriptor.getMessageType(),
                   fieldSchema == null ? null : fieldSchema.getFieldsList(),
                   json.getJSONObject(exactJsonKeyName),
                   currentScope,
-                  /*topLevel =*/ false,
                   ignoreUnknownFields));
           return;
         }
@@ -495,7 +688,7 @@ public class JsonToProtoMessage {
     throw new IllegalArgumentException(
         String.format(
             "JSONObject does not have a %s field at %s.",
-            FieldTypeToDebugMessage.get(fieldDescriptor.getType()), currentScope));
+            FIELD_TYPE_TO_DEBUG_MESSAGE.get(fieldDescriptor.getType()), currentScope));
   }
 
   /**
@@ -509,7 +702,7 @@ public class JsonToProtoMessage {
    * @param currentScope Debugging purposes
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
-  private static void fillRepeatedField(
+  private void fillRepeatedField(
       DynamicMessage.Builder protoMsg,
       FieldDescriptor fieldDescriptor,
       TableFieldSchema fieldSchema,
@@ -533,24 +726,23 @@ public class JsonToProtoMessage {
     }
     java.lang.Object val;
     int index;
-    boolean fail = false;
     for (int i = 0; i < jsonArray.length(); i++) {
       val = jsonArray.get(i);
       index = i;
       switch (fieldDescriptor.getType()) {
         case BOOL:
           if (val instanceof Boolean) {
-            protoMsg.addRepeatedField(fieldDescriptor, (Boolean) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else if (val instanceof String
-              && ("true".equals(((String) val).toLowerCase())
-                  || "false".equals(((String) val).toLowerCase()))) {
+              && ("true".equalsIgnoreCase(((String) val))
+                  || "false".equalsIgnoreCase(((String) val)))) {
             protoMsg.addRepeatedField(fieldDescriptor, Boolean.parseBoolean((String) val));
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case BYTES:
-          Boolean added = false;
+          boolean added = false;
           if (fieldSchema != null && fieldSchema.getType() == TableFieldSchema.Type.NUMERIC) {
             if (val instanceof String) {
               protoMsg.addRepeatedField(
@@ -565,10 +757,13 @@ public class JsonToProtoMessage {
                       new BigDecimal(((Number) val).longValue())));
               added = true;
             } else if (val instanceof Float || val instanceof Double) {
+              BigDecimal bigDecimal = new BigDecimal(String.valueOf(val));
+              if (bigDecimal.scale() > 9) {
+                bigDecimal = bigDecimal.setScale(NUMERIC_SCALE, RoundingMode.HALF_UP);
+              }
               protoMsg.addRepeatedField(
                   fieldDescriptor,
-                  BigDecimalByteStringEncoder.encodeToNumericByteString(
-                      new BigDecimal(String.valueOf(val))));
+                  BigDecimalByteStringEncoder.encodeToNumericByteString(bigDecimal));
               added = true;
             } else if (val instanceof BigDecimal) {
               protoMsg.addRepeatedField(
@@ -599,12 +794,14 @@ public class JsonToProtoMessage {
             } else if (val instanceof BigDecimal) {
               protoMsg.addRepeatedField(
                   fieldDescriptor,
-                  BigDecimalByteStringEncoder.encodeToNumericByteString((BigDecimal) val));
+                  BigDecimalByteStringEncoder.encodeToBigNumericByteString((BigDecimal) val));
               added = true;
             }
           }
           if (!added) {
-            if (val instanceof byte[]) {
+            if (val instanceof ByteString) {
+              protoMsg.addRepeatedField(fieldDescriptor, ((ByteString) val).toByteArray());
+            } else if (val instanceof byte[]) {
               protoMsg.addRepeatedField(fieldDescriptor, val);
             } else if (val instanceof JSONArray) {
               try {
@@ -632,7 +829,7 @@ public class JsonToProtoMessage {
                             + "] could not be converted to byte[]."));
               }
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           }
           break;
@@ -641,11 +838,12 @@ public class JsonToProtoMessage {
             if (val instanceof String) {
               protoMsg.addRepeatedField(
                   fieldDescriptor,
-                  CivilTimeEncoder.encodePacked64DatetimeMicros(LocalDateTime.parse((String) val)));
+                  CivilTimeEncoder.encodePacked64DatetimeMicros(
+                      LocalDateTime.parse((String) val, DATETIME_FORMATTER)));
             } else if (val instanceof Long) {
-              protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+              protoMsg.addRepeatedField(fieldDescriptor, val);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (fieldSchema != null && fieldSchema.getType() == TableFieldSchema.Type.TIME) {
             if (val instanceof String) {
@@ -653,43 +851,43 @@ public class JsonToProtoMessage {
                   fieldDescriptor,
                   CivilTimeEncoder.encodePacked64TimeMicros(LocalTime.parse((String) val)));
             } else if (val instanceof Long) {
-              protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+              protoMsg.addRepeatedField(fieldDescriptor, val);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (fieldSchema != null
               && fieldSchema.getType() == TableFieldSchema.Type.TIMESTAMP) {
             if (val instanceof String) {
               Double parsed = Doubles.tryParse((String) val);
               if (parsed != null) {
-                protoMsg.addRepeatedField(fieldDescriptor, parsed.longValue() * 10000000);
+                protoMsg.addRepeatedField(fieldDescriptor, parsed.longValue());
               } else {
-                TemporalAccessor parsedTime = timestampFormatter.parse((String) val);
+                TemporalAccessor parsedTime = TIMESTAMP_FORMATTER.parse((String) val);
                 protoMsg.addRepeatedField(
                     fieldDescriptor,
                     parsedTime.getLong(ChronoField.INSTANT_SECONDS) * 1000000
                         + parsedTime.getLong(ChronoField.MICRO_OF_SECOND));
               }
             } else if (val instanceof Long) {
-              protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+              protoMsg.addRepeatedField(fieldDescriptor, val);
             } else if (val instanceof Integer) {
-              protoMsg.addRepeatedField(fieldDescriptor, new Long((Integer) val) * 10000000);
+              protoMsg.addRepeatedField(fieldDescriptor, Long.valueOf((Integer) val));
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (val instanceof Integer) {
-            protoMsg.addRepeatedField(fieldDescriptor, new Long((Integer) val));
+            protoMsg.addRepeatedField(fieldDescriptor, Long.valueOf((Integer) val));
           } else if (val instanceof Long) {
-            protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else if (val instanceof String) {
             Long parsed = Longs.tryParse((String) val);
             if (parsed != null) {
               protoMsg.addRepeatedField(fieldDescriptor, parsed);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case INT32:
@@ -700,19 +898,19 @@ public class JsonToProtoMessage {
             } else if (val instanceof Integer || val instanceof Long) {
               protoMsg.addRepeatedField(fieldDescriptor, ((Number) val).intValue());
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (val instanceof Integer) {
-            protoMsg.addRepeatedField(fieldDescriptor, (Integer) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else if (val instanceof String) {
             Integer parsed = Ints.tryParse((String) val);
             if (parsed != null) {
               protoMsg.addRepeatedField(fieldDescriptor, parsed);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case STRING:
@@ -723,9 +921,9 @@ public class JsonToProtoMessage {
             }
           }
           if (val instanceof String) {
-            protoMsg.addRepeatedField(fieldDescriptor, (String) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case DOUBLE:
@@ -736,35 +934,35 @@ public class JsonToProtoMessage {
             if (parsed != null) {
               protoMsg.addRepeatedField(fieldDescriptor, parsed);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case MESSAGE:
           if (val instanceof JSONObject) {
-            Message.Builder message = protoMsg.newBuilderForField(fieldDescriptor);
             protoMsg.addRepeatedField(
                 fieldDescriptor,
-                convertJsonToProtoMessageImpl(
+                convertToProtoMessage(
                     fieldDescriptor.getMessageType(),
                     fieldSchema == null ? null : fieldSchema.getFieldsList(),
                     jsonArray.getJSONObject(i),
                     currentScope,
-                    /*topLevel =*/ false,
                     ignoreUnknownFields));
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
       }
-      if (fail) {
-        throw new IllegalArgumentException(
-            String.format(
-                "JSONObject does not have a %s field at %s[%d].",
-                FieldTypeToDebugMessage.get(fieldDescriptor.getType()), currentScope, index));
-      }
     }
+  }
+
+  private static void throwWrongFieldType(
+      FieldDescriptor fieldDescriptor, String currentScope, int index) {
+    throw new IllegalArgumentException(
+        String.format(
+            "JSONObject does not have a %s field at %s[%d].",
+            FIELD_TYPE_TO_DEBUG_MESSAGE.get(fieldDescriptor.getType()), currentScope, index));
   }
 }
